fix horizontal overflow

--- a/assets/base.css
+++ b/assets/base.css
@@ -2567,8 +2567,8 @@ details[open] > .header__submenu {
   content: "";
   position: absolute;
   top: 75px;
-  left: -30px;
-  width: calc(100% + 60px);
+  left: -15px;
+  width: 100vw;
   height: 100%;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   pointer-events: none;
@@ -2578,8 +2578,8 @@ details[open] > .header__submenu {
   content: "";
   position: absolute;
   top: 1px;
-  left: -30px;
-  width: calc(100% + 60px);
+  left: -15px;
+  width: 100vw;
   height: 100%;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   pointer-events: none;
